projects/backups/backup-config-files/stpi-router.virtual-labs.ac.in/vz/private/12236/root/haneef/iptables
# Generated by iptables-save v1.4.7 on Fri Nov 23 15:25:52 2012
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
#
#
#Lines to static NAT 196.12.53.132 with 10.4.12.165 (pascal.iiit.ac.in and pascal.virtual-labs.ac.in)
-A POSTROUTING -s 10.4.12.165 -o eth0 -j SNAT --to-source 196.12.53.132
-A PREROUTING -d 196.12.53.132 -i eth0 -j DNAT --to-destination 10.4.12.165
#
#
#Lines to static NAT 196.12.53.133 with 10.4.12.169 (ssh-tunnel.virtual-labs.ac.in)
##-A PREROUTING -d 196.12.53.133 -i eth0 -p tcp --dport 22 -j DNAT --to-destination 10.4.12.169
-A PREROUTING -d 196.12.53.133 -j DNAT --to-destination 10.4.12.169
-A POSTROUTING -s 10.4.12.169 -j SNAT --to-source 196.12.53.133
###-A POSTROUTING -j MASQUERADE
#
#
#Lines to static NAT 196.12.53.135 with 10.4.12.199 (version-control.virtual-labs.ac.in)
####-A POSTROUTING -s 10.4.12.199 -o eth0 -j SNAT --to-source 196.12.53.135
###-A PREROUTING -p tcp -d 196.12.53.135 -j DNAT --to-destination 10.4.12.199
#
#
#
#Lines to static NAT 196.12.53.131 with 10.4.12.201 (gateone.virtual-labs.ac.in)
-A POSTROUTING -s 10.4.12.201 -o eth0 -j SNAT --to-source 196.12.53.131
-A PREROUTING -d 196.12.53.131 -i eth0 -j DNAT --to-destination 10.4.12.201
#
#
#NAT all others to WAN IP
###-A POSTROUTING -o eth0 -j SNAT --to-source 196.12.53.130
###Haneef
###-A POSTROUTING -o eth0 -j MASQUERADE
#
#
#Nat ssh to svn.virtual-labs.ac.in
##-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.199
-A POSTROUTING -j MASQUERADE
###-A POSTROUTING -o eth1 -d 10.4.12.199 -p tcp -m tcp --dport 22 -j SNAT --to-source 10.4.12.236

#
#
#Nat Remotedesktop to civil11.virtual-labs.ac.in
-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.4.12.175
-A POSTROUTING -o eth1 -d 10.4.12.175 -p tcp -m tcp --dport 3389 -j SNAT --to-source 10.4.12.236
#

#
#NAT incoming DNS requests to 10.4.12.157(ns1.virtual-labs.ac.in)
##-A PREROUTING -i eth0 -d 196.12.53.134 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.157
##-A PREROUTING -i eth0 -d 196.12.53.134 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.157

## NAT incoming Windows-Server 2008 Remote connection to eee07.virtual-labs.ac.in on BASE-3
##-A PREROUTING -i eth0 -d 196.12.53.134 -p udp -m udp --dport 3389 -j DNAT --to-destination 10.4.12.62
##-A PREROUTING -i eth0 -d 196.12.53.134 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.4.12.62
#
#
#NAT incoming DNS requests to 10.4.12.216(ns2.virtual-labs.ac.in)
-A PREROUTING -i eth0 -d 196.12.53.130 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.216
-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.216
-A POSTROUTING -o eth1 -d 10.4.12.175 -p tcp -m tcp --dport 53 -j SNAT --to-source 196.12.53.130
#
#
#NAT incoming HTTP, HTTPS requests to 10.4.12.159(http.virtual-labs.ac.in)
-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.159
-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.159
-A PREROUTING -i eth0 -d 196.12.53.134 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.159
-A PREROUTING -i eth0 -d 196.12.53.134 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.159

#NAT incoming imap, smtp requests to mail.virtual-labs.ac.in
#NAT FOR SMTP
-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 25 -j DNAT --to-destination 10.4.7.234
-A POSTROUTING -o eth1 -d 10.4.7.234 -p tcp -m tcp --dport 25 -j SNAT --to-source 10.4.12.236
#NAT FOR IMAP
-A PREROUTING -i eth0 -d 196.12.53.130 -p tcp -m tcp --dport 143 -j DNAT --to-destination 10.4.7.234
-A POSTROUTING -o eth1 -d 10.4.7.234 -p tcp -m tcp --dport 143 -j SNAT --to-source 10.4.12.236
#
#
#NAT incoming VPN requests to vpn.virtual-labs.ac.in (Disabled by Ishan: 28-Feb-2014)
##-A PREROUTING -i eth0 -d 196.12.53.130 -p udp -m udp --dport 1194 -j DNAT --to-destination 10.4.12.160
#
COMMIT
*filter
:INPUT ACCEPT [58:2762]
:FORWARD ACCEPT [115:5500]
:OUTPUT ACCEPT [25:1619]
#INPUT chain configuration
#Allow ongoing connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Allow ping and other ICMP
-A INPUT -p icmp -j ACCEPT
#Allow incoming SSH connections from local IPs
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5666 -j ACCEPT
#Allow loopback connections
-A INPUT -i lo -j ACCEPT
#Deny everthing else
-A INPUT -j REJECT
#
#FORWARD chain configuration
#Forward everything
-A FORWARD -d 10.4.12.169 -j ACCEPT
-A FORWARD -j ACCEPT
#
#OUTPUT chain configuration
#Send everything
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Fri Nov 23 15:25:52 2012
